--- a/frontend/src/components/searchBar/SearchBar.module.css
+++ b/frontend/src/components/searchBar/SearchBar.module.css
@@ -3,23 +3,15 @@
   margin-right: 1em;
 }
 
-.selectLabel {
-  display: flex;
-  align-items: center;
-  height: 2em;
-  padding-right: 0.5em;
-  color: rgb(var(--sec-text));
-  font-size: 0.8em;
-}
-
 select {
   appearance: none;
   width: 5em;
   height: 2em;
   border-style: none;
   background-color: rgb(var(--top-color));
-  border-radius: var(--videoCard-radius);
-  text-align: center;
+  border-top-left-radius: var(--videoCard-radius);
+  border-bottom-left-radius: var(--videoCard-radius);
+  text-align-last: center;
   font-size: 0.8em;
   cursor: pointer;
 }
@@ -28,7 +20,7 @@ select:hover {
   border: 1px solid rgb(var(--sec-text));
 }
 
-.defaultSelect{
+.defaultSelect {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,8 +36,8 @@ select:hover {
   height: 2em;
   padding-left: 0.6em;
   border-style: none;
-  border-radius: var(--videoCard-radius);
-  margin-left: 0.5em;
+  border-top-right-radius: var(--videoCard-radius);
+  border-bottom-right-radius: var(--videoCard-radius);
   background-color: rgb(var(--top-color));
 }
 
