--- a/frontend/src/components/preview/Preview.module.css
+++ b/frontend/src/components/preview/Preview.module.css
@@ -13,6 +13,7 @@
   width: 100%;
   aspect-ratio: 16/9;
   justify-content: flex-end;
+  overflow: hidden;
   border: 1.5px solid rgb(var(--hover-color));
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
