--- a/frontend/src/components/videoCard/VideoCard.module.css
+++ b/frontend/src/components/videoCard/VideoCard.module.css
@@ -2,98 +2,64 @@
   position: relative;
   display: flex;
   overflow: hidden;
-  width: 10rem;
+  width: var(--card-width);
   aspect-ratio: 1/1.5;
-  border-radius: 0.5rem;
-  margin: 0.5rem;
+  margin: 0.7rem;
   cursor: pointer;
+  border-radius: var(--border-radius);
+  outline: 2px solid rgb(var(--menu-color))
 }
 
-/* .container:hover {
-  transform: scaleY(1.1);
-  transition: transform 0.4s;
-} */
-
-/* .container:hover .poster {
-  transform: scaleY(0.9) translateY(-12px);
-  transition: transform 0.4s;
-} */
-
-.container:hover .info {
-  /*   transform: scaleY(0.9) translateY(0.5em);
-  transition: transform 0.4s; */
-  transform: translateY(2rem);
-  transition: transform 0.5s;
+.container:hover {
+  outline: 5px solid white;
 }
 
 .poster {
   position: absolute;
   z-index: 2;
-  display: flex;
-  justify-content: center;
 }
 
 .poster > img {
   width: 100%;
   aspect-ratio: 1/1.5;
-  /*   image-rendering: crisp-edges; */
 }
 
 .info {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   bottom: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 2rem;
-  padding: 0.1em;
+  padding: 0.5rem;
   background: linear-gradient(
     0deg,
     rgba(var(--menu-color), 1) 90%,
     rgba(255, 255, 255, 0) 100%
   );
+  background: rgba(var(--menu-color), 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(15px);
 }
 
-.title > p {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 95%;
-  font-size: calc((var(--videoCard-width)) * 1 / 10);
-  text-align: center;
-}
-
-.bottom {
-  position: absolute;
-  bottom: 1.1em;
-  display: flex;
-  align-items: center;
-  width: 100%;
-}
-
-.year {
-  position: absolute;
-  left: 5px;
-  font-size: calc((var(--videoCard-width)) * 1 / 13);
+.year p,
+.runtime p {
+  color: rgb(var(--prim-text));
+  font-size: calc((var(--card-width)) * 1 / 13)
 }
 
 .languages {
-  position: absolute;
-  left: 30%;
+  position: relative;
   display: flex;
-  justify-content: center;
-  width: 30%;
 }
 
 .german,
 .english {
-  width: calc((var(--videoCard-width)) * 1 / 8);
+  width: calc((var(--card-width)) * 1 / 8);
   aspect-ratio: 1/1;
-  background-size: calc((var(--videoCard-width)) * 1 / 8);
+  background-size: calc((var(--card-width)) * 1 / 8);
   background-repeat: no-repeat;
 }
 
@@ -102,17 +68,6 @@
 }
 
 .english {
-  margin-left: 5px;
+  margin-left: 0.5rem;
   background-image: url("../../assets/icons/english.png");
-}
-
-.runtime {
-  position: absolute;
-  right: 5px;
-  font-size: calc((var(--videoCard-width)) * 1 / 13);
-}
-
-.year p,
-.runtime p {
-  color: rgb(var(--secondary-text));
 }
