--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,8 +5,8 @@
   --sec-text: 176, 176, 176;
   --top-color: 11, 11, 11;
   --hover-color: 55, 55, 55;
-  --videoCard-width: 9em;
-  --videoCard-radius: 7px;
+  --card-width: 9rem;
+  --border-radius: 0.3rem;
 }
 
 * {
@@ -16,4 +16,8 @@
   font-family: "Segoe UI", Arial, sans-serif;
   color: rgb(var(--prim-text));
   outline: none;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
 }
