--- a/editor/src/pages/Form.module.css
+++ b/editor/src/pages/Form.module.css
@@ -10,16 +10,21 @@
 
 .poster {
   display: flex;
-  justify-content: center;
+  width: 10rem;
+  height: 15rem;
+  border: 1px solid rgb(var(--sec-text));
+  border-radius: var(--videoCard-radius);
+  overflow: hidden;
 }
 
 .poster > img {
-  width: 10rem;
-  aspect-ratio: 1 / 1.5;
+  width: 100%;
+  object-fit: fill;
 }
 .omdbRow,
 .row {
   display: flex;
+  justify-content: center;
   align-items: flex-end;
 }
 
