--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -5,6 +5,18 @@
   background-color: rgb(var(--back-color));
 }
 
+.loadingScreen {
+  position: absolute;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.9;
+}
+
 .left {
   display: flex;
   flex-direction: column;
@@ -14,7 +26,7 @@
   background-color: rgb(var(--back-color));
 }
 
-header{
+header {
   position: sticky;
   top: 0;
   z-index: 2;
@@ -23,7 +35,7 @@ header{
   background-color: rgb(var(--back-color));
 }
 
-footer{
+footer {
   position: absolute;
   bottom: 0;
   z-index: 2;
@@ -35,7 +47,7 @@ footer{
   background-color: rgb(var(--back-color));
 }
 
-.topBar{
+.topBar {
   display: flex;
   background-color: aqua;
 }
