--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: grey;
   opacity: 0.9;
 }
 
