--- a/frontend/src/components/preview/Preview.module.css
+++ b/frontend/src/components/preview/Preview.module.css
@@ -12,7 +12,7 @@
   display: flex;
   width: 100%;
   aspect-ratio: 16/9;
-  justify-content: flex-end;
+  justify-content: center;
   overflow: hidden;
   border: 1.5px solid rgb(var(--hover-color));
   border-bottom-left-radius: 1rem;
