--- a/frontend/src/components/toggleBar/ToggleBar.module.css
+++ b/frontend/src/components/toggleBar/ToggleBar.module.css
@@ -5,7 +5,7 @@
   display: flex;
   overflow: hidden;
   height: 2em;
-  border-radius: var(--videoCard-radius);
+  border-radius: 0.3rem;
   border: 2px solid rgb(var(--sec-text));
   font-size: 0.9em;
 }
