--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,15 +5,15 @@
   --sec-text: 176, 176, 176;
   --top-color: 11, 11, 11;
   --hover-color: 55, 55, 55;
-  --card-width: 9rem;
-  --border-radius: 0.3rem;
+  --card-width: 10rem;
+  --border-radius: 0.5rem;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(var(--prim-text));
   outline: none;
 }
