--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -20,7 +20,7 @@
 .left {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 55%;
   overflow-y: auto;
   height: 100vh; /*for vertical scrolling*/
   background-color: rgb(var(--back-color));
@@ -30,14 +30,21 @@ header {
   position: sticky;
   top: 0;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   padding-top: 1rem;
   background-color: rgb(var(--back-color));
 }
 
+.topBar{
+  display: flex;
+  justify-content: space-between;
+}
+
 .right {
   display: flex;
-  width: 50%;
+  width: 45%;
   background-color: rgb(var(--menu-color));
 }
 
