--- a/frontend/src/components/preview/Preview.module.css
+++ b/frontend/src/components/preview/Preview.module.css
@@ -14,7 +14,7 @@
   aspect-ratio: 16/9;
   justify-content: center;
   overflow: hidden;
-  border: 1.5px solid rgb(var(--hover-color));
+  border: 2px solid rgb(var(--hover-color));
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   background-color: black;
@@ -23,10 +23,6 @@
 .teaser > video {
   width: 100%;
   object-fit: fill;
-}
-
-.teaser > img {
-  border: 1.5px solid rgb(var(--hover-color));
 }
 
 .btns {
@@ -110,7 +106,7 @@
 
 .description {
   display: flex;
-  overflow-y: auto;
+  overflow: auto;
   flex-direction: column;
   padding: 1rem;
   gap: 0.6rem;
@@ -119,8 +115,13 @@
 .title {
   position: sticky;
   top: 0;
-  height: calc((var(--card-width)) * 2 / 6);
-  font-size: calc((var(--card-width)) * 1 / 6);
+  height: calc((var(--card-width)) * 2 / 5);
+  font-size: calc((var(--card-width)) * 1 / 5);
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
 }
 
 .numbers {
@@ -134,11 +135,12 @@
   color: rgb(var(--sec-text));
 }
 
-.fsk > p {
+.fsk > p,
+.rating > p {
   border: 1px solid rgb(var(--sec-text));
   border-radius: 0.2rem;
-  padding-left: 10px;
-  padding-right: 10px;
+  text-align: center;
+  width: 2rem;
 }
 
 .rating,
